--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.data.mongodb.uri=mongodb://maamjadi:<>@cluster0-shard-00-00-oyziu.mongodb.net:27017,cluster0-shard-00-01-oyziu.mongodb.net:27017,cluster0-shard-00-02-oyziu.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=app1
