--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,12 @@
             <artifactId>json-smart</artifactId>
             <version>2.2.1</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
